2005-05-31  Gianluca Guida  <glguida@gmail.com>

	* node.c (node_unlink_file): Use lookup to figure out whether a file
	exists or not, or it will fail on read-only filesystems. 
	Reported by Ben Asselstine.

2005-05-30  Gianluca Guida  <glguida@gmail.com>

	* AUTHORS: Added myself in the list.
	* README: Added sections "Introduction" and "Stowing Feature".
	* options.c (argp_program_bug_address): Changed address.

	* lib.c (for_each_subdir): When call to stat() fails free "name"
	and continue the loop, instead of returning error. Return 0 at the
	end of the loop.
	(for_each_subdir_priv): Likewise.

	* stow.c (_stow_registermatchingdirs): Don't return error when
	patternlist_match returns false. Free filepath before returning
	error when ulfs_register fails.

	* ulfs.c (ulfs_register): Removed bogus fprintf.
	
2005-05-29  Gianluca Guida  <glguida@gmail.com>

	* Makefile: Added support for building mig stubs for stow feature.
	(OBJS): Added update.o
	(unionfs): Added fs_notifyServer.o to final linking.
	(unionfs.static): Likewise.
	(fs_notifyServer.o): New rule.
	(clean): Remove fs_notifyServer.c and fs_notify_S.h when cleaning.

	* netfs.c (OFFSET_T): New macro.
	(_get_node_size): New function.
	(netfs_validate_stat): Call _get_node_size for root node.

	* node.c (node_unlink_file): New variable "removed". Return ENOENT
	if no files unlinked.
	
	* ulfs.c: Include "unionfs", fcntl.h and "lib.h".
	(ulfs_install, ulfs_uninstall): Rewritten.
	(ulfs_for_each_under_priv, ulfs_check): New function.
	(ulfs_register): Check that argument is a directory.
	* ulfs.h: Removed field "prevp" from struct ulfs.
	(ulfs_check): New declaration.
	(ulfs_iterate, ulfs_iterate_unlocked): Don't use ulfs_chain_end.
	* lib.c (check_dir): New function.
	* lib.h: Added declaration of check_dir.
	
	* stow.c: Include "update.h", cthreads.h, hurd/port.h,
	"stow-priv.h" and "ncache.h".
	(stow_privdata) Added "lock" to struct. Removed "remove" to
	struct.